force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/ucinn_ascendv2__Patient_Referral__c.object-meta.xml
<CustomObject>
    <description>Stores the referral a physician makes of a patient.</description>
    <label>Patient Referral (DEPRECATED)</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Patient Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Referrals (DEPRECATED)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>