force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Internal_Liaison__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Internal_Liaison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Liaison</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Patient_Referrals_Internal_Liaison</relationshipName>
    <type>Lookup</type>
</CustomField>