force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Outreach_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Outreach_Follow_Up_Date__c</fullName>
    <label>Outreach Follow-Up Date</label>
    <type>Date</type>
</CustomField>