force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Patient__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Patient_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>