force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Physician__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician__c</fullName>
    <label>Physician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.ucinn_ascendv2__Physician_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Click show all results to enter a referral made by a researcher.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Patient_Referrals1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>