force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Physician_Department_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Physician_Department_Formula__c</fullName>
    <formula>ucinn_ascendv2__Physician__r.ucinn_ascendv2__Physician_Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physician Department</label>
    <type>Text</type>
</CustomField>