force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Planned_Giving__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Planned_Giving__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planned Giving</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Patient_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>