force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Proposal_Entered_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal_Entered_Formula__c</fullName>
    <formula>IF(ISBLANK(ucinn_ascendv2__Planned_Giving__c),&quot;N&quot;,&quot;Y&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Entered</label>
    <type>Text</type>
</CustomField>