force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Referral_Origin__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Referral_Origin__c</fullName>
    <label>Referral Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider Panel Review</fullName>
            </value>
            <value>
                <fullName>Provider Initiated</fullName>
            </value>
            <value>
                <fullName>Patient/Family Initiated</fullName>
            </value>
            <value>
                <fullName>G2G List Review</fullName>
            </value>
            <value>
                <fullName>Event Follow-Up</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>