force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Referral_Outreach_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Referral_Outreach_Method__c</fullName>
    <label>Referral Outreach Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider Personal Call/Email</fullName>
            </value>
            <value>
                <fullName>Advancement Personal Call/Email</fullName>
            </value>
            <value>
                <fullName>GP Opt-Out Email</fullName>
            </value>
            <value>
                <fullName>GP Opt-Out Letter</fullName>
            </value>
            <value>
                <fullName>Engagement Program Opt-In</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>