force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Referral_Status__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Referral_Status__c</fullName>
    <label>Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Assigned</fullName>
                <default>true</default>
                <label>Needs Assigned</label>
            </value>
            <value>
                <fullName>Discuss with PM</fullName>
            </value>
            <value>
                <fullName>Hold - Health</fullName>
            </value>
            <value>
                <fullName>Hold - Strategy</fullName>
            </value>
            <value>
                <fullName>Faculty Disqualify</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>In Discovery</fullName>
            </value>
            <value>
                <fullName>Completed - Managed</fullName>
            </value>
            <value>
                <fullName>Completed - DQ</fullName>
            </value>
            <value>
                <fullName>Completed - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>