force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Related_Strategy__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Strategy</label>
    <referenceTo>ucinn_ascendv2__Strategy__c</referenceTo>
    <relationshipName>Patient_Referrals_Related_Strategy</relationshipName>
    <type>Lookup</type>
</CustomField>