force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Research_Rating__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Research_Rating__c</fullName>
    <label>Research Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>