force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Strategy_Entered__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Strategy_Entered__c</fullName>
    <label>Strategy Entered</label>
    <length>2</length>
    <type>Text</type>
</CustomField>