force-app/main/default/objects/ucinn_ascendv2__Patient_Referral__c/fields/ucinn_ascendv2__Substantive_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Substantive_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Substantive Contact</label>
    <referenceTo>ucinn_ascendv2__Contact_Report__c</referenceTo>
    <relationshipName>Patient_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>